=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.99
       
   beta07

   * sphere_mode setting for increased performance including use of
     GL_POINT based sphere impostors

   * -O option for when you've just got to squeeze a few million atoms
     into PyMOL for CPK/sphere rendering...

   * slightly reduced RAM usage when rendering complex scenes

   * converted all the Python code to 4-space indentation (more standard)

   * viewport can now take a single argument (height or width)

   * oversize images are now downsampled and displayed

   beta06

   * draw command -- enables OpenGL rendering of large images

   * fixed state argument for cmd.get_distance

   * support for windows hidden folders with terminal dollar sign:
    //share/folder$/path/file

   beta05

   * ray now stops and movie and turns off sculpting

   * Better return conventions for the PyMOL API:  errors return negatives,
   success returns None, and boolean queries return 0 or 1.  Exceptions
   are raised by default on error conditions unless the 
   raise_exceptions setting is disabled

   beta03

   * fixes to presets and polar contact finding code

   * changes to the action menu for selections

   * addressed single-click select and menu with slow refresh

   * fixed serious race condition / threading bug in popup menus -- this
   explains & eliminate the sporadic crashes observed on smp machines

   beta02

   * fixed broken reading of multistate objects from strings
   
   beta01

   * identified cause and temporary workaround for bad nVidia drivers on linux

   * fixed performace issue with torsion update mechanism when rotating torsions

Changes up to 0.98

   beta35

   * isosurface and isomesh now use the same ranging criteria

   * matrix_transfer, matrix_reset commands (WHAT A PAIN)

   * added support for row-major 4x4 homogenous transformation