@@ -1480,7 +1480,9 @@ SetConsoleCtrlHandler(
          printf("  GL_VENDOR: %s\n",(char*)glGetString(GL_VENDOR));
          printf("  GL_RENDERER: %s\n",(char*)glGetString(GL_RENDERER));
          printf("  GL_VERSION: %s\n",(char*)glGetString(GL_VERSION));
-         printf("  GL_EXTENSIONS: %s\n",(char*)glGetString(GL_EXTENSIONS));
+         if(Feedback(G,FB_OpenGL,FB_Blather)) {
+           printf("  GL_EXTENSIONS: %s\n",(char*)glGetString(GL_EXTENSIONS));
+         }
          if(G->StereoCapable) {
            printf("  Hardware stereo capability detected.\n");
          } else if((G->Option->force_stereo==1)&&(!G->StereoCapable)) {
